# shre-crewai-projects

./: requirements.txt
coder/output/: code_and_output.txt
coder/src/coder/: crew.py  main.py
coder/src/coder/config/: agents.yaml  tasks.yaml
debate/: pyproject.toml
debate/output/: decide.md  oppose.md  propose.md
debate/src/debate/: crew.py  main.py
debate/src/debate/config/: agents.yaml  tasks.yaml
engg_team/: README.md  pyproject.toml
engg_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
engg_team/src/engg_team/: crew.py  main.py
engg_team/src/engg_team/config/: agents.yaml  tasks.yaml
financial_researcher/: pyproject.toml
financial_researcher/output/: analysis.md
financial_researcher/src/financial_researcher/: crew.py  main.py
financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
stock_picker/memory/: long_term_memory_storage.db
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
stock_picker/src/stock_picker/tools/: push_tool.py
