[project]
name = "engg_team"
version = "0.1.0"
description = "engg-team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.4.1",
]

[project.scripts]
engg_team = "engg_team.main:run"
run_crew = "engg_team.main:run"
train = "engg_team.main:train"
replay = "engg_team.main:replay"
test = "engg_team.main:test"
run_with_trigger = "engg_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
